--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="tab_text_1">Chats</string>
-    <string name="tab_text_2">Status</string>
-    <string name="tab_text_3">Calls</string>
+    <string name="tab_text_1">Calls</string>
+    <string name="tab_text_2">Images</string>
+    <string name="tab_text_3">Etc</string>
 </resources>
